# optuna

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  asv.conf.json  benchmark.py  benchmark_performance.py  checks.sh  demo_nsgaiii.py  dependency-description.md  diff.txt  formats.sh  pyproject.toml  reproduce_fix_demo.py  requirements.yaml  run_kurobako.py  setup.cfg  setup.py  test.py  test_best_trials_all_infeasible.py  test_exception_retry_fix.py  test_fix_direct.py  test_nsgaii_constraint_issue.py  test_pareto_front_constraint_fix.py  test_retry_failed_callback_fix.py  test_unused_ignore_fix.py  tox.ini  verify_correctness.py  (+1 more)
.circleci/: config.yml  visual-regression-tests.yml
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  download_mnist_from_openml.py  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  code-fix.yml  documentation.md  documentation.yml  feature-request.md  feature-request.yml  questions-help-support.md  questions-help-support.yml
.github/workflows/: checks-integration.yml  checks-optional.yaml  checks.yml  circleci-artifacts-link.yml  codecov.yml  coverage.yml  doc-link.yml  dockerimage.yml  examples.yml  kurobako-performace-cli-version.yml  kurobako-performace.yml  kurobako.yml  kuurobako-performace-cli-version.yml  kuurobako-performace.yml  labeler.yml  mac-tests.yml  matplotlib-tests.yml  performance-benchmarks-bayesmark.yml  performance-benchmarks-kurobako.yml  performance-benchmarks-mo-kurobako.yml  performance-benchmarks-naslib.yml  pypi-publish.yml  read-the-docs.yml  reviewdog.yml  speed-benchmarks.yml  sphinx-build.yml  stale.yml  test-pypi-publish.yml  tests-integration.yml  tests-mpi.yml  tests-rdbstorage.yml  tests-storage.yml  tests-with-lower.yml  tests-with-minimum-version.yml  tests-with-minimum-versions.yml  tests.yml  visual-regression.yml  windows-tests.yml  z_allennlp.yml  z_catboost.yml  (+19 more)
benchmarks/: README.md  bench_numba.py  mo_create_study.py  mo_runner.py  optimize.py  report_bayesmark.py  run_bayesmark.py  run_kurobako.py  run_mo_kurobako.py  run_naslib.py
benchmarks/asv/: optimize.py
benchmarks/bayesmark/: optuna_optimizer.py  report_bayesmark.py  report_template.md
benchmarks/kurobako/: mo_create_study.py
benchmarks/naslib/: problem.py  run_naslib.py
benchmarks/problem/: binh_and_korn_problem.py  wfg1_problem.py  wfg2_problem.py  wfg3_problem.py  wfg4_problem.py  wfg5_problem.py  wfg6_problem.py  wfg7_problem.py  wfg8_problem.py  wfg9_problem.py  wfg_problem.py
benchmarks/problems/: wfg_problem.py
doc/: Makefile
doc/source/: index.rst
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  faq.rst  index.rst  installation.rst  license_thirdparty.rst  plotly_directive.py  privacy.rst
docs/visualization_examples/: GALLERY_HEADER.rst  README.rst  hypervolume_history.py  intermediate_values.py  optimization_history.py  optuna.visualization.plot_contour.py  optuna.visualization.plot_edf.py  optuna.visualization.plot_parallel_coordinate.py  optuna.visualization.plot_param_importances.py  optuna.visualization.plot_pareto_front.py  optuna.visualization.plot_rank.py  rank.py  timeline.py  (+3 more)
examples/: README.md  add_trial_sample.ipynb  allennlp_simple.py  batch_quadratic_simple.py  botorch_simple.py  catalyst_simple.py  catboost_simple.py  chainer_mnist.py  chainer_pruner.py  chainer_simple.py  chainermn_mnist.py  chainermn_simple.py  dask_ml_simple.py  dask_simple.py  enqueue_trial.py  fastai_simple.py  fastaiv1_simple.py  fastaiv2_simple.py  gluon_simple.py  haiku_simple.py  ignite_simple.py  keras_simple.py  lightgbm_cancer.py  lightgbm_pruner.py  lightgbm_simple.py  lightgbm_tuner_cv.py  lightgbm_tuner_simple.py  max_trials_callback.py  mxnet_simple.py  optuna_rapids.py  optuna_search_cv_simple.py  pytorch_distributed_simple.py  pytorch_horovod.py  pytorch_ignite_simple.py  pytorch_lightning_simple.py  pytorch_save_model.py  pytorch_simple.py  quadratic.py  quadratic_simple.py  quadratic_tpe_test.py  (+23 more)
optuna/: __init__.py  _batch_study.py  _callbacks.py  _convert_positional_args.py  _dataframe.py  _deprecated.py  _deprecation.py  _experimental.py  _frozen_trial.py  _imports.py  _multi_objective.py  _multi_objective_utils.py  _numba_utils.py  _optimize.py  _search_space_group.py  _study_direction.py  _study_summary.py  _transform.py  _typing.py  _updated_trials_queue.py  _warnings.py  cli.py  config.py  dashboard.py  deprecated.py  distributions.py  exceptions.py  experimental_warning.py  facade.py  logging.py  progress_bar.py  pruners.py  serialization.py  stepwise.py  structs.py  study.py  test.py  trial.py  type_checking.py  types.py  (+3 more)
out2/: problems.json  solvers.json  studies.json
pfnopt/: __init__.py  cli.py  client.py  config.py  dashboard.py  distributions.py  frozen_trial.py  logging.py  main.py  pruners.py  storage.py  structs.py  study.py  study_summary.py  study_task.py  trial.py
tests/: conftest.py  test_batch_study.py  test_callbacks.py  test_cli.py  test_cma_wm.py  test_config.py  test_convert_positional_args.py  test_dashboard.py  test_deprecated.py  test_deprecation.py  test_distributions.py  test_dummy.py  test_experimental.py  test_facade.py  test_importance.py  test_imports.py  test_logging.py  test_multi_objective.py  test_multi_objective_utils.py  test_numba_utils.py  test_pruners.py  test_search_space_group.py  test_serialization.py  test_stepwise.py  test_structs.py  test_study.py  test_transform.py  test_trial.py  test_updated_trials_queue.py  test_visualization.py  test_warning_decorators.py
tools/: run_examples.py
tutorial/: 001_first.py  002_configurations.py  003_rdb.py  004_distributed.py  005_cli.py  006_attributes.py  007_pruning.py  008_sampler.py  README.rst  attributes.rst
visual_regression_tests/: .gitignore  README.md  studies.py  visual_regression_tests.py
(+1056 files in other folders)
